# FakeNewsBot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
fake_news_bot/: bot.py  chat_model.py  db.py  llm.py
